# PokerHandBuddy

./: settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/cpp/: CMakeLists.txt  ompeval.cpp
app/src/cpp/omp/: Constants.h  EquityCalculator.h
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ace_of_clubs.xml  ace_of_diamonds.xml  ace_of_hearts.xml  ace_of_spades.xml  border_background.xml  card_selected.xml  eight_of_clubs.xml  eight_of_diamonds.xml  eight_of_hearts.xml  eight_of_spades.xml  five_of_clubs.xml  five_of_diamonds.xml  five_of_hearts.xml  five_of_spades.xml  four_of_clubs.xml  four_of_diamonds.xml  four_of_hearts.xml  four_of_spades.xml  ic_cancel_icon.xml  jack_of_clubs.xml  jack_of_diamonds.xml  jack_of_hearts.xml  jack_of_spades.xml  king_of_clubs.xml  king_of_diamonds.xml  king_of_hearts.xml  king_of_spades.xml  nine_of_clubs.xml  nine_of_diamonds.xml  nine_of_hearts.xml  nine_of_spades.xml  queen_of_clubs.xml  queen_of_diamonds.xml  queen_of_hearts.xml  queen_of_spades.xml  rounded_corner_view.xml  seven_of_clubs.xml  seven_of_diamonds.xml  seven_of_hearts.xml  seven_of_spades.xml  (+20 more)
app/src/main/res/layout/: activity_about.xml  activity_main.xml  change_card_dialog_layout.xml  dialog_card_selector.xml  fragment_deuces_wild.xml  fragment_jacks_or_better.xml  fragment_texas_holdem.xml  fragment_todo.xml  item_cardback.xml  item_hand_stat.xml  item_holdem_player.xml  item_pull_to_refresh.xml  stat_dialog_layout.xml
app/src/main/res/menu/: menu_items.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+57 files in other folders)
